// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckoutAssetDetails should call on submit lease form 1`] = `
<Fragment>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 16,
        "marginTop": 24,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#33495E",
        }
      }
      textType="semiBold"
      type="small"
    >
      rentAndDeposit
    </Text>
    <Dropdown
      containerStyle={
        Object {
          "borderWidth": 0,
          "paddingHorizontal": 0,
          "paddingVertical": 0,
        }
      }
      data={Array []}
      icon="down-arrow"
      iconColor="#667686"
      iconSize={8}
      onDonePress={[Function]}
      textStyle={
        Object {
          "color": "#667686",
          "marginEnd": 6,
        }
      }
      value="INR"
    />
  </View>
  <withI18nextTranslation(LeaseDetailsForm)
    currency="INR"
    initialValues={null}
    onSubmit={[Function]}
    testID="leaseForm"
  />
</Fragment>
`;

exports[`CheckoutAssetDetails should match snapshot for lease flow 1`] = `
<Fragment>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 16,
        "marginTop": 24,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#33495E",
        }
      }
      textType="semiBold"
      type="small"
    >
      rentAndDeposit
    </Text>
    <Dropdown
      containerStyle={
        Object {
          "borderWidth": 0,
          "paddingHorizontal": 0,
          "paddingVertical": 0,
        }
      }
      data={Array []}
      icon="down-arrow"
      iconColor="#667686"
      iconSize={8}
      onDonePress={[Function]}
      textStyle={
        Object {
          "color": "#667686",
          "marginEnd": 6,
        }
      }
      value="INR"
    />
  </View>
  <withI18nextTranslation(LeaseDetailsForm)
    currency="INR"
    initialValues={null}
    onSubmit={[Function]}
    testID="leaseForm"
  />
</Fragment>
`;

exports[`CheckoutAssetDetails should match snapshot for resale flow 1`] = `
<Fragment>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 16,
        "marginTop": 24,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#33495E",
        }
      }
      textType="semiBold"
      type="small"
    >
      resaleDetails
    </Text>
    <Dropdown
      containerStyle={
        Object {
          "borderWidth": 0,
          "paddingHorizontal": 0,
          "paddingVertical": 0,
        }
      }
      data={Array []}
      icon="down-arrow"
      iconColor="#667686"
      iconSize={8}
      onDonePress={[Function]}
      textStyle={
        Object {
          "color": "#667686",
          "marginEnd": 6,
        }
      }
      value="INR"
    />
  </View>
  <withI18nextTranslation(ResaleDetailsForm)
    currency="INR"
    initialValues={null}
    onSubmit={[Function]}
    testID="resaleForm"
  />
</Fragment>
`;
